# openauto-prodigy

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  PICKUP.md  README.md  cross-build.sh  install-prebuilt.sh  install.sh  toolchain-pi4.cmake
libs/open-androidauto/: CMakeLists.txt  README.md
libs/open-androidauto/proto/: AVChannelData.proto  AVChannelMediaConfigMessage.proto  AVChannelMediaStatsMessage.proto  AVChannelMessageIdsEnum.proto  AVChannelSetupRequestMessage.proto  AVChannelSetupResponseMessage.proto  AVChannelSetupStatusEnum.proto  AVChannelStartIndicationMessage.proto  AVChannelStopIndicationMessage.proto  AVInputChannelData.proto  AVInputOpenRequestMessage.proto  AVInputOpenResponseMessage.proto  AVMediaAckIndicationMessage.proto  AVStreamTypeEnum.proto  AbsoluteInputEventData.proto  AbsoluteInputEventsData.proto  AccelData.proto  AdditionalVideoConfigData.proto  AudioConfigData.proto  AudioFocusChannelData.proto  AudioFocusRequestMessage.proto  AudioFocusResponseMessage.proto  AudioFocusStateEnum.proto  AudioFocusTypeEnum.proto  AudioTypeEnum.proto  AuthCompleteIndicationMessage.proto  BindingRequestMessage.proto  BindingResponseMessage.proto  BluetoothChannelConfigData.proto  BluetoothChannelData.proto  BluetoothChannelMessageIdsEnum.proto  BluetoothPairingMethodEnum.proto  BluetoothPairingRequestMessage.proto  BluetoothPairingResponseMessage.proto  BluetoothPairingStatusEnum.proto  ButtonCodeEnum.proto  ButtonEventData.proto  ButtonEventsData.proto  CallAvailabilityMessage.proto  ChannelDescriptorData.proto  (+128 more)
libs/open-androidauto/tests/: CMakeLists.txt  test_channel_id.cpp  test_control_channel.cpp  test_frame_assembler.cpp  test_messenger.cpp  test_protocol_logger.cpp  test_replay_transport.cpp  test_session_fsm.cpp  test_version.cpp
src/: CMakeLists.txt  main.cpp
src/core/: Configuration.cpp  Configuration.hpp  InputDeviceScanner.cpp  InputDeviceScanner.hpp  Logging.cpp  Logging.hpp  YamlConfig.cpp  YamlConfig.hpp  YamlMerge.hpp
src/core/aa/: AaBootstrap.cpp  AaBootstrap.hpp  AndroidAutoEntity.cpp  AndroidAutoEntity.hpp  AndroidAutoOrchestrator.cpp  AndroidAutoOrchestrator.hpp  AndroidAutoRuntimeBridge.cpp  AndroidAutoRuntimeBridge.hpp  AndroidAutoService.cpp  AndroidAutoService.hpp  BluetoothDiscoveryService.cpp  BluetoothDiscoveryService.hpp  CodecCapability.cpp  CodecCapability.hpp  DmaBufVideoBuffer.cpp  DmaBufVideoBuffer.hpp  EvdevCoordBridge.cpp  EvdevCoordBridge.hpp  EvdevTouchReader.cpp  EvdevTouchReader.hpp  GpioNightMode.cpp  GpioNightMode.hpp  IService.hpp  ManeuverIconProvider.hpp  MediaDataBridge.cpp  MediaDataBridge.hpp  NavigationDataBridge.cpp  NavigationDataBridge.hpp  NightModeProvider.cpp  NightModeProvider.hpp  PerfStats.hpp  ProtocolLogger.cpp  ProtocolLogger.hpp  ServiceDiscoveryBuilder.cpp  ServiceDiscoveryBuilder.hpp  ServiceFactory.cpp  ServiceFactory.hpp  StatusIndicatorHelper.hpp  ThemeNightMode.cpp  ThemeNightMode.hpp  (+11 more)
src/core/audio/: AudioDeviceInfo.hpp  AudioRingBuffer.hpp  BiquadFilter.hpp  EqualizerEngine.cpp  EqualizerEngine.hpp  EqualizerPresets.hpp  PipeWireDeviceRegistry.cpp  PipeWireDeviceRegistry.hpp  SoftLimiter.hpp
src/core/plugin/: HostContext.cpp  HostContext.hpp  IHostContext.hpp  IPlugin.hpp  PluginDiscovery.cpp  PluginDiscovery.hpp  PluginLoader.cpp  PluginLoader.hpp  PluginManager.cpp  PluginManager.hpp  PluginManifest.cpp  PluginManifest.hpp
src/core/services/: ActionRegistry.cpp  ActionRegistry.hpp  AudioService.cpp  AudioService.hpp  BluetoothManager.cpp  BluetoothManager.hpp  CompanionListenerService.cpp  CompanionListenerService.hpp  ConfigService.cpp  ConfigService.hpp  DisplayService.cpp  DisplayService.hpp  EqualizerService.cpp  EqualizerService.hpp  EventBus.cpp  EventBus.hpp  IAudioService.hpp  IBluetoothService.hpp  ICallStateProvider.cpp  ICallStateProvider.hpp  IConfigService.hpp  IDisplayService.hpp  IEqualizerService.hpp  IEventBus.hpp  (+28 more)
src/ui/: ApplicationController.cpp  ApplicationController.hpp  ApplicationTypes.hpp  AudioDeviceModel.cpp  AudioDeviceModel.hpp  CodecCapabilityModel.cpp  CodecCapabilityModel.hpp  DisplayInfo.cpp  DisplayInfo.hpp  GestureOverlayController.cpp  GestureOverlayController.hpp  LauncherModel.cpp  LauncherModel.hpp  NavbarController.cpp  NavbarController.hpp  NotificationModel.cpp  NotificationModel.hpp  PairedDevicesModel.cpp  PairedDevicesModel.hpp  PluginModel.cpp  PluginModel.hpp  PluginRuntimeContext.cpp  PluginRuntimeContext.hpp  PluginViewHost.cpp  PluginViewHost.hpp  SettingsInputBoundary.cpp  SettingsInputBoundary.hpp  ThemeController.cpp  ThemeController.hpp  WidgetContextFactory.cpp  WidgetContextFactory.hpp  WidgetGridModel.cpp  WidgetGridModel.hpp  WidgetInstanceContext.cpp  WidgetInstanceContext.hpp  WidgetPickerModel.cpp  WidgetPickerModel.hpp  WidgetPlacementModel.cpp  WidgetPlacementModel.hpp
tests/: CMakeLists.txt  test_aa_orchestrator.cpp  test_action_registry.cpp  test_android_auto_runtime_bridge.cpp  test_audio_channel_handler.cpp  test_audio_ring_buffer.cpp  test_audio_service.cpp  test_avinput_channel_handler.cpp  test_biquad_filter.cpp  test_bluetooth_channel_handler.cpp  test_bluetooth_manager.cpp  test_bt_discovery_service.cpp  test_circular_buffer.cpp  test_codec_capability.cpp  test_companion_listener.cpp  test_config_key_coverage.cpp  test_config_service.cpp  test_configuration.cpp  test_device_registry.cpp  test_display_info.cpp  test_display_service.cpp  test_equalizer_engine.cpp  test_equalizer_presets.cpp  test_equalizer_service.cpp  test_evdev_coord_bridge.cpp  test_event_bus.cpp  test_gesture_overlay_controller.cpp  test_grid_dimensions.cpp  test_hostapd_config.cpp  test_indicator_mapping.cpp  test_input_channel_handler.cpp  test_input_device_scanner.cpp  test_install_list_prebuilt.py  test_logging.cpp  test_maneuver_icon_provider.cpp  test_media_data_bridge.cpp  test_media_status_channel_handler.cpp  test_media_status_service.cpp  test_navbar_controller.cpp  test_navigation_channel_handler.cpp  (+38 more)
tests/data/: test_config.ini  test_config.yaml  test_plugin.yaml  test_widget_config.yaml
(+2640 files in other folders)
